<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/list_background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <!-- 标题栏 -->
        <LinearLayout
            android:id="@+id/note_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_modified_date"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="8dip"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearanceSecondaryItem" />

            <ImageView
                android:id="@+id/iv_alert_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/title_alert" />

            <TextView
                android:id="@+id/tv_alert_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="8dip"
                android:textAppearance="@style/TextAppearanceSecondaryItem" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_set_color" />
        </LinearLayout>



        <!-- 编辑区域 -->
        <LinearLayout
            android:id="@+id/sv_note_edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <!--富文本功能栏-->
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/action_bold"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/action_bold" />

                    <Button
                        android:id="@+id/action_italic"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/action_italic" />
                </LinearLayout>

            </HorizontalScrollView>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="7dip"
                android:background="@drawable/bg_color_btn_mask" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:fadingEdgeLength="0dip"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">


                    <!--旧的文本编辑器被弃用net.micode.notes.ui.NoteEditText-->
                    <jp.wasabeef.richeditor.RichEditor
                        android:id="@+id/note_edit_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="left|top"
                        android:lineSpacingMultiplier="1.2"
                        android:linksClickable="false"
                        android:minLines="12"
                        android:textAppearance="@style/TextAppearancePrimaryItem" />

                    <LinearLayout
                        android:id="@+id/note_edit_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-10dip"
                        android:orientation="vertical"
                        android:visibility="gone" />
                </LinearLayout>
            </ScrollView>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="7dip"
                android:background="@drawable/bg_color_btn_mask" />

        </LinearLayout>

    </LinearLayout>

    <!-- 背景颜色设置按钮 -->
    <ImageView
        android:id="@+id/btn_set_bg_color"
        android:layout_width="wrap_content"
        android:layout_height="43dip"
        android:layout_gravity="top|right"
        android:background="@drawable/bg_color_btn_mask" />

    <!-- 背景颜色选择器 -->
    <LinearLayout
        android:id="@+id/note_bg_color_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="30dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/note_edit_color_selector_panel"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_yellow"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_yellow_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="5dip"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_blue_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="3dip"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_white_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="2dip"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_green_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_red_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/font_size_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/font_size_selector_bg"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/ll_font_small"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:src="@drawable/font_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_font_small"
                    android:textAppearance="@style/TextAppearanceUnderMenuIcon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_small_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="6dip"
                android:layout_marginBottom="-7dip"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/ll_font_normal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:src="@drawable/font_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_font_normal"
                    android:textAppearance="@style/TextAppearanceUnderMenuIcon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_medium_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="6dip"
                android:layout_marginBottom="-7dip"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/ll_font_large"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:src="@drawable/font_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_font_large"
                    android:textAppearance="@style/TextAppearanceUnderMenuIcon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_large_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="6dip"
                android:layout_marginBottom="-7dip"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/ll_font_super"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:src="@drawable/font_super" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_font_super"
                    android:textAppearance="@style/TextAppearanceUnderMenuIcon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_super_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="6dip"
                android:layout_marginBottom="-7dip"
                android:focusable="false"
                android:src="@drawable/selected"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <!--    &lt;!&ndash; 新添加的水平滚动视图 &ndash;&gt;-->
    <!--    <HorizontalScrollView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="37dp"-->
    <!--        android:layout_gravity="bottom">-->
    <!--        <LinearLayout-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:orientation="horizontal">-->
    <!--            <Button-->
    <!--                android:id="@+id/action_bold"-->
    <!--                android:layout_width="40dp"-->
    <!--                android:layout_height="40dp"-->
    <!--                android:layout_weight="1"-->
    <!--                android:background="@drawable/action_bold" />-->
    <!--            <Button-->
    <!--                android:id="@+id/action_italic"-->
    <!--                android:layout_width="40dp"-->
    <!--                android:layout_height="40dp"-->
    <!--                android:layout_weight="1"-->
    <!--                android:background="@drawable/action_italic" />-->
    <!--            &lt;!&ndash; 其它按钮 &ndash;&gt;-->
    <!--        </LinearLayout>-->
    <!--    </HorizontalScrollView>-->
</FrameLayout>
